--- a/client-side/pages/edit.html
+++ b/client-side/pages/edit.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Donor Registration</h1>
+        <h1>Edit Donor</h1>
         <form  id="frm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -44,6 +44,5 @@
             </div>
         </form>
     </div>
-    <script src="../js/custom.js"></script>
 </body>
 </html>
